# Tangle-study

./: .editorconfig  .gitignore  README.md  Tangle.slnx  docker-compose.harness.yml  docker-compose.runtime.yml  docker-compose.yml  package-lock.json
.cursor/rules/: api-exceptions.mdc  csharp-brace-style.mdc  csharp-client-interfaces.mdc  docker-dotnet.mdc  github-actions.mdc  msa-consistency.mdc  script-style.mdc
.github/workflows/: cd-v1.yml  cd-v2.yml  ci-v1.yml  ci-v2.yml  ci.yml  deploy.yml
clients/web/: .env.example  .gitignore  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
docker/: Dockerfile.sdk  README.md  versions.dev.env  versions.prod.env
docs/: AGENTS.md  ARCHITECTURE.md  CONSISTENCY.md  DEPLOYMENT.md  EVENTS.md  MSA_MIGRATION.md  QUEUE.md  README.md  REDIS.md  SERVICE_BOUNDARIES.md
infra/: README.md
infra/azure/: README.md  main.bicep  parameters.dev.json  parameters.prod.json
infra/nginx/: docker-entrypoint.sh  nginx.conf  nginx.conf.template  nginx.harness.conf  nginx.production.conf
infra/prometheus/: docker-entrypoint.sh  prometheus.yml  recording_rules.yml
scripts/: azure-cd-bluegreen-deploy.sh  azure-cd-build-push.sh  azure-cd-deploy-image.sh  azure-cd-ensure-api-web-runtime.sh  azure-cd-ensure-redis.sh  azure-cd-inject-secrets.sh  azure-cd-migrate.sh  azure-cd-smoke.sh  azure-cd-update-images.sh  azure-cd-wait-image.sh  azure-deploy-infra.sh  ci-fix-cache-ownership.sh  dev-clear-db.sh  docker-dotnet.sh  docker-test.sh  migrate.sh  render-versions-env.sh  run-all-tests.sh  run-media-harness.sh  validate-postgres-connection-string.sh
scripts/cd/: azure-cd-build-push.sh  azure-cd-deploy-bicep.sh  azure-cd-deploy-image.sh  azure-cd-inject-secrets.sh  azure-cd-migrate.sh  azure-cd-smoke.sh  azure-cd-wait-image.sh
scripts/ci/: build-worker-images.sh  build-workers-release.sh  compose-build-stack.sh  docker-test.sh  dotnet-publish.sh  load-compose-stack.sh  render-versions-env.sh  run-media-harness.sh  run-stack-harness.sh
scripts/lib/: az-retry.sh  azure-container-apps-readiness.sh  azure-redis-readiness.sh  build_postgres_dsn.py  ci-cache.sh  common.sh  container-app-job-logs.sh  log-redact.py  postgres-connection-string.sh
scripts/shared/: common.sh  compose-env.sh
services/Api/: AGENTS.md  Api.csproj  Dockerfile  Dockerfile.runtime  Program.cs  appsettings.Development.json  appsettings.Docker.json  appsettings.Production.json  appsettings.json  media-limits.yml  security.yml
services/Api.Tests/: .editorconfig  Api.Tests.csproj
services/Chat/: CHAT.md  Chat.csproj  Dockerfile  Dockerfile.runtime  Program.cs  appsettings.Development.json  appsettings.Docker.json  appsettings.Production.json  appsettings.json  chat-config.yml  security.yml
services/Chat.Tests/: Chat.Tests.csproj
services/Community/: COMMUNITY.md  Community.csproj  Dockerfile  Dockerfile.runtime  Program.cs  appsettings.Docker.json  appsettings.json  security.yml
services/Community.Tests/: Community.Tests.csproj
services/Gateway/: Dockerfile  GATEWAY.md  (+6 more)
services/Gateway.Tests/: Gateway.Tests.csproj
workers/: .gitignore  Cargo.toml  README.md
workers/crates/worker-core/: Cargo.toml
workers/crates/worker-core/src/: callback.rs  config.rs  consumer.rs  dlq.rs  error.rs  handler.rs  http_client.rs  job.rs  lib.rs  message.rs  metrics.rs  retry.rs  runtime.rs  telemetry.rs  test_support.rs
workers/crates/worker-core/tests/: redis_xpending_integration.rs
workers/crates/worker-location/: Cargo.toml
workers/crates/worker-location/src/: cluster.rs  config.rs  handler.rs  job.rs  main.rs  message.rs  stream_handler.rs
workers/crates/worker-media/: Cargo.toml
workers/crates/worker-media/src/: api_callback.rs  config.rs  handler.rs  job.rs  lib.rs  main.rs  message.rs  probe.rs  processing.rs  storage.rs  stream_handler.rs
workers/crates/worker-media/tests/: azurite_download_integration.rs  media_handler_integration.rs
workers/rust-worker/: Cargo.toml  Dockerfile  README.md
workers/rust-worker/src/: api_callback.rs  cluster.rs  config.rs  consumer.rs  dlq.rs  encode_plan.rs  job.rs  main.rs  message.rs  metrics.rs  processing.rs  retry.rs  storage.rs  telemetry.rs
workers/rust-worker/src/handlers/: chat_message_created.rs  location_cluster.rs  media_uploaded.rs  mod.rs
(+1646 files in other folders)
