[package]
name = "tangle-worker"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "Redis Streams consumer for Tangle async jobs"
publish = false

[[bin]]
name = "tangle-worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "streams"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
tokio-test = "0.4"
