[package]
name = "worker-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Shared Redis Streams consumer infrastructure for Tangle workers"
publish.workspace = true

[lib]
name = "worker_core"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = "0.18"
redis = { version = "1.3", features = ["tokio-comp", "connection-manager", "streams"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["io-util", "macros", "rt-multi-thread", "signal", "net"] }
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
