[package]
name = "worker-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Redis Streams consumer for Tangle media.uploaded jobs"
publish.workspace = true

[[bin]]
name = "worker-media"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
worker-core = { path = "../worker-core" }
anyhow = "1.0"
async-trait = "0.1"
azure_core = "1.0"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
futures = "0.3"
metrics = "0.24"
redis = { version = "1.3", features = ["tokio-comp", "connection-manager", "streams"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3"
tokio = { version = "1.52", features = ["io-util", "macros", "process", "rt-multi-thread", "signal"] }
tracing = "0.1"
